RESOLVED FIXED141078
vprintf_stderr_common print garbage bytes in windows
https://bugs.webkit.org/show_bug.cgi?id=141078
Summary vprintf_stderr_common print garbage bytes in windows
Namhoon Kim
Reported 2015-01-30 05:21:55 PST
https://bugs.webkit.org/show_bug.cgi?id=140917#c6 If formatted string made in vprintf_stderr_common has length of exactly 1024, windows api _vsnprintf does not place null character automatically. It makes following OutputDebugStringA call prints some garbage bytes. I don't think it's a critical bug. Because vprintf_stderr_common function does not used anywhere.
Attachments
Patch (1.39 KB, patch)
2015-01-30 05:30 PST, Namhoon Kim
no flags
Namhoon Kim
Comment 1 2015-01-30 05:30:57 PST
Brent Fulgham
Comment 2 2015-01-30 10:47:54 PST
Comment on attachment 245712 [details] Patch R=me. Thank you!
WebKit Commit Bot
Comment 3 2015-01-30 16:39:38 PST
Comment on attachment 245712 [details] Patch Clearing flags on attachment: 245712 Committed r179424: <http://trac.webkit.org/changeset/179424>
WebKit Commit Bot
Comment 4 2015-01-30 16:39:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.