Call vsnprintf instead of _vsnprintf in vprintf_stderr_common https://bugs.webkit.org/show_bug.cgi?id=141078

In windows _vsnprintf api does not place null character
automatically. Simply replace it with vsnprintf. Which is
polyfill to call wtf_vsnprintf in windows.

Patch by Namhoon Kim <yanhkim@gmail.com> on 2015-01-30
Reviewed by Brent Fulgham.

* wtf/Assertions.cpp:

Canonical link: https://commits.webkit.org/159101@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179424 268f45cc-cd09-0410-ab3c-d52691b4dbfc